--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,6 @@
-@import "~normalize.css/normalize.css";
-@import url('https://fonts.googleapis.com/css?family=Dosis:300,400,700');
+@import url(../node_modules/normalize.css/normalize.css);
+@import url(https://fonts.googleapis.com/css?family=Dosis:300,400,700);
+/* https://coolors.co/1446a0-08b2e3-efe9f4-db3069-484d6d */
 
 :root {
     --accent-color: #1446a0;
@@ -74,12 +75,21 @@ body {
 
 .info-value {
     font-size: 1.2em;
+    transition-property: color;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
 }
 
 .info-value.-actual {
+    min-width: 4em;
+    text-align: right;
     font-size: 1.4em;
     font-weight: 700;
     color: var(--lighten-color);
+}
+
+.info-value.-actual.-is-over {
+    color: var(--danger-color);
 }
 
 .info-value.-average {
@@ -103,9 +113,20 @@ body {
 }
 
 .progress > svg path {
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke: var(--accent-color);
+    stroke-width: 20;
     stroke-dasharray: 1509;
-    stroke-dashoffset: 1509;
-    stroke-dashoffset: 650;
+    stroke-dashoffset: 1508.176513671875;
+    transition-property: stroke;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
+}
+
+.progress > svg path.-is-over {
+    stroke: var(--danger-color);
 }
 
 .shower-illustration {
@@ -141,10 +162,28 @@ body {
     cursor: pointer;
 }
 
+.multiplicator:focus {
+    outline: none;
+}
+
+.multiplicator:focus::after {
+    content: "";
+}
+
 .multiplicator::before {
     display: inline-block;
     vertical-align: middle;
     height: 5rem;
+}
+
+.multiplicator::after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, .2);
 }
 
 .license {
