--- a/views/counter.html
+++ b/views/counter.html
@@ -1,13 +1,13 @@
 <div class="infos-container">
     <div class="infos -time">
         <p class="info-label -time">Time</p>
-        <p class="info-value -time -actual js-actual-time">{{ actualTime }}</p>
-        <p class="info-value -time -average js-average-time">{{ averageTime }}</p>
+        <p class="info-value -time -actual" :class="{ '-is-over': actualProgress > 1 }">{{ actualTime }}</p>
+        <p class="info-value -time -objective">{{ objectiveTime }}</p>
     </div>
 
     <div class="infos -consumption">
         <p class="info-label -consumption">Consumption</p>
-        <p class="info-value -consumption -actual js-actual-consumption">{{ actualConsumption }}</p>
-        <p class="info-value -consumption -average js-average-consumption">{{ averageConsumption }}</p>
+        <p class="info-value -consumption -actual" :class="{ '-is-over': actualProgress > 1 }">{{ actualConsumption }}</p>
+        <p class="info-value -consumption -objective">{{ objectiveConsumption }}</p>
     </div>
 </div>
