--- a/css/global.css
+++ b/css/global.css
@@ -107,6 +107,12 @@ body {
     margin-bottom: 6rem;
     margin-left: auto;
     margin-right: auto;
+    border-width: 0;
+    background-color: transparent;
+}
+
+.progress:focus {
+    outline: none;
 }
 
 .progress > svg {
