--- a/css/global.css
+++ b/css/global.css
@@ -211,6 +211,30 @@ button {
     fill: var(--lighten-color);
 }
 
+.stop {
+    padding-top: .9rem;
+    padding-bottom: .9rem;
+    padding-left: 3.6rem;
+    padding-right: 3.6rem;
+    font-size: 2em;
+    visibility: hidden;
+    opacity: 0;
+    transition-property: visibility, opacity;
+    transition-duration: 0s, .3s;
+    transition-delay: .3s, 0s;
+}
+
+    .progress + .stop {
+        margin-top: -4rem;
+        margin-bottom: 6rem;
+    }
+
+    .stop.-is-shown {
+        visibility: visible;
+        opacity: 1;
+        transition-delay: 0s;
+    }
+
 .multiplicator {
     position: fixed;
     bottom: 2rem;
